--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.1",
     "@types/react": "^18.2.79",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "typescript": "^5.4.5",
-    "expo-location": "~16.5.5"
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
